test case and test suite

--- a/.project
+++ b/.project
@@ -17,44 +17,14 @@
 	</natures>
 	<linkedResources>
 		<link>
-			<name>kat-11092042882811323164.groovy</name>
-			<type>1</type>
-			<location>C:/Users/ACERAS~1/AppData/Local/Temp/Katalon/Web Services/kat-11092042882811323164.groovy</location>
-		</link>
-		<link>
 			<name>kat-11274276884847744480.groovy</name>
 			<type>1</type>
 			<location>C:/Users/ACERAS~1/AppData/Local/Temp/Katalon/Web Services/kat-11274276884847744480.groovy</location>
 		</link>
 		<link>
-			<name>kat-1219781090220560917.groovy</name>
-			<type>1</type>
-			<location>C:/Users/ACERAS~1/AppData/Local/Temp/Katalon/Web Services/kat-1219781090220560917.groovy</location>
-		</link>
-		<link>
 			<name>kat-13751829005481820717.groovy</name>
 			<type>1</type>
 			<location>C:/Users/ACERAS~1/AppData/Local/Temp/Katalon/Web Services/kat-13751829005481820717.groovy</location>
-		</link>
-		<link>
-			<name>kat-1381522929679715690.groovy</name>
-			<type>1</type>
-			<location>C:/Users/ACERAS~1/AppData/Local/Temp/Katalon/Web Services/kat-1381522929679715690.groovy</location>
-		</link>
-		<link>
-			<name>kat-14065989071108576908.groovy</name>
-			<type>1</type>
-			<location>C:/Users/ACERAS~1/AppData/Local/Temp/Katalon/Web Services/kat-14065989071108576908.groovy</location>
-		</link>
-		<link>
-			<name>kat-15041100433237634777.groovy</name>
-			<type>1</type>
-			<location>C:/Users/ACERAS~1/AppData/Local/Temp/Katalon/Web Services/kat-15041100433237634777.groovy</location>
-		</link>
-		<link>
-			<name>kat-15060818822248053903.groovy</name>
-			<type>1</type>
-			<location>C:/Users/ACERAS~1/AppData/Local/Temp/Katalon/Web Services/kat-15060818822248053903.groovy</location>
 		</link>
 		<link>
 			<name>kat-15671493805740551865.groovy</name>
@@ -67,19 +37,14 @@
 			<location>C:/Users/ACERAS~1/AppData/Local/Temp/Katalon/Web Services/kat-1576977857543371204.groovy</location>
 		</link>
 		<link>
-			<name>kat-18275099796556253118.groovy</name>
-			<type>1</type>
-			<location>C:/Users/ACERAS~1/AppData/Local/Temp/Katalon/Web Services/kat-18275099796556253118.groovy</location>
-		</link>
-		<link>
 			<name>kat-1860615739670147809.groovy</name>
 			<type>1</type>
 			<location>C:/Users/ACERAS~1/AppData/Local/Temp/Katalon/Web Services/kat-1860615739670147809.groovy</location>
 		</link>
 		<link>
-			<name>kat-242782416250140074.groovy</name>
+			<name>kat-2519022746565956745.groovy</name>
 			<type>1</type>
-			<location>C:/Users/ACERAS~1/AppData/Local/Temp/Katalon/Web Services/kat-242782416250140074.groovy</location>
+			<location>C:/Users/ACERAS~1/AppData/Local/Temp/Katalon/Web Services/kat-2519022746565956745.groovy</location>
 		</link>
 		<link>
 			<name>kat-3235345489862931932.groovy</name>
@@ -87,34 +52,14 @@
 			<location>C:/Users/ACERAS~1/AppData/Local/Temp/Katalon/Web Services/kat-3235345489862931932.groovy</location>
 		</link>
 		<link>
-			<name>kat-3581178933669383845.groovy</name>
-			<type>1</type>
-			<location>C:/Users/ACERAS~1/AppData/Local/Temp/Katalon/Web Services/kat-3581178933669383845.groovy</location>
-		</link>
-		<link>
-			<name>kat-3881681408776131482.groovy</name>
-			<type>1</type>
-			<location>C:/Users/ACERAS~1/AppData/Local/Temp/Katalon/Web Services/kat-3881681408776131482.groovy</location>
-		</link>
-		<link>
 			<name>kat-4205080779868085391.groovy</name>
 			<type>1</type>
 			<location>C:/Users/ACERAS~1/AppData/Local/Temp/Katalon/Web Services/kat-4205080779868085391.groovy</location>
 		</link>
 		<link>
-			<name>kat-6471231963644425847.groovy</name>
+			<name>kat-7416541713478460043.groovy</name>
 			<type>1</type>
-			<location>C:/Users/ACERAS~1/AppData/Local/Temp/Katalon/Web Services/kat-6471231963644425847.groovy</location>
-		</link>
-		<link>
-			<name>kat-714647583240624331.groovy</name>
-			<type>1</type>
-			<location>C:/Users/ACERAS~1/AppData/Local/Temp/Katalon/Web Services/kat-714647583240624331.groovy</location>
-		</link>
-		<link>
-			<name>kat-9949525920012906679.groovy</name>
-			<type>1</type>
-			<location>C:/Users/ACERAS~1/AppData/Local/Temp/Katalon/Web Services/kat-9949525920012906679.groovy</location>
+			<location>C:/Users/ACERAS~1/AppData/Local/Temp/Katalon/Web Services/kat-7416541713478460043.groovy</location>
 		</link>
 	</linkedResources>
 	<filteredResources>
@@ -237,6 +182,78 @@
 		</filter>
 		<filter>
 			<id>1725935870486</id>
+			<name></name>
+			<type>6</type>
+			<matcher>
+				<id>org.eclipse.core.resources.regexFilterMatcher</id>
+				<arguments>(.*\.svn-base$)|(.*\.png$)|(.*\.log$)|(.*\.xlsx$)|(.*\.xls$)|(.*\.csv$)|(.*\.txt$)</arguments>
+			</matcher>
+		</filter>
+		<filter>
+			<id>1725971405248</id>
+			<name></name>
+			<type>10</type>
+			<matcher>
+				<id>org.eclipse.core.resources.regexFilterMatcher</id>
+				<arguments>.*\.svn$</arguments>
+			</matcher>
+		</filter>
+		<filter>
+			<id>1725971405280</id>
+			<name></name>
+			<type>6</type>
+			<matcher>
+				<id>org.eclipse.core.resources.regexFilterMatcher</id>
+				<arguments>(.*\.svn-base$)|(.*\.png$)|(.*\.log$)|(.*\.xlsx$)|(.*\.xls$)|(.*\.csv$)|(.*\.txt$)</arguments>
+			</matcher>
+		</filter>
+		<filter>
+			<id>1726041268416</id>
+			<name></name>
+			<type>10</type>
+			<matcher>
+				<id>org.eclipse.core.resources.regexFilterMatcher</id>
+				<arguments>.*\.svn$</arguments>
+			</matcher>
+		</filter>
+		<filter>
+			<id>1726041268463</id>
+			<name></name>
+			<type>6</type>
+			<matcher>
+				<id>org.eclipse.core.resources.regexFilterMatcher</id>
+				<arguments>(.*\.svn-base$)|(.*\.png$)|(.*\.log$)|(.*\.xlsx$)|(.*\.xls$)|(.*\.csv$)|(.*\.txt$)</arguments>
+			</matcher>
+		</filter>
+		<filter>
+			<id>1726042379117</id>
+			<name></name>
+			<type>10</type>
+			<matcher>
+				<id>org.eclipse.core.resources.regexFilterMatcher</id>
+				<arguments>.*\.svn$</arguments>
+			</matcher>
+		</filter>
+		<filter>
+			<id>1726042379317</id>
+			<name></name>
+			<type>6</type>
+			<matcher>
+				<id>org.eclipse.core.resources.regexFilterMatcher</id>
+				<arguments>(.*\.svn-base$)|(.*\.png$)|(.*\.log$)|(.*\.xlsx$)|(.*\.xls$)|(.*\.csv$)|(.*\.txt$)</arguments>
+			</matcher>
+		</filter>
+		<filter>
+			<id>1726118050837</id>
+			<name></name>
+			<type>10</type>
+			<matcher>
+				<id>org.eclipse.core.resources.regexFilterMatcher</id>
+				<arguments>.*\.svn$</arguments>
+			</matcher>
+		</filter>
+		<filter>
+			<id>1726118050868</id>
 			<name></name>
 			<type>6</type>
 			<matcher>
